@@ -1,0 +1,3 @@
+# -*- coding: utf-8 -*-
+# $Id$
+"""collective.monkeypatcher"""
